--- a/as-net/package.json
+++ b/as-net/package.json
@@ -1,7 +1,6 @@
 {
   "name": "as-net",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.1.4",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -23,5 +22,22 @@
     "tailwindcss": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.1"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lin1717/tea-mug"
+  },
+  "keywords": [
+    "as",
+    "net",
+    "bnb"
+  ],
+  "author": "rama",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lin1717/tea-mug/issues"
+  },
+  "homepage": "https://github.com/lin1717/tea-mug#readme"
 }
